--- a/profiles/soar/themes/custom/minimalist_admin/sass/custom.scss
+++ b/profiles/soar/themes/custom/minimalist_admin/sass/custom.scss
@@ -2,6 +2,7 @@
 @import "base/init";
 
 @import "regions/header";
+@import "regions/main";
 
 @import "modules/button";
 @import "modules/features";
@@ -14,8 +15,7 @@
 @import "modules/workbench";
 @import "modules/wysiwyg";
 
-
 @import "theme/admin";
 @import "theme/forms";
 @import "theme/tables";
-
+@import "theme/node";
