--- a/profiles/soar/themes/custom/minimalist_admin/sass/regions/_header.scss
+++ b/profiles/soar/themes/custom/minimalist_admin/sass/regions/_header.scss
@@ -25,6 +25,9 @@
 .page-header {
   .title {
     color: $brand-primary;
+    text-transform: uppercase;
+    font-size: 1.7em;
+    font-weight: bold;
   }
 }
 
