Trying to fix image width in FF

--- a/profiles/soar/libraries/ckeditor/plugins/widgetbootstrap/contents.css
+++ b/profiles/soar/libraries/ckeditor/plugins/widgetbootstrap/contents.css
@@ -32,6 +32,14 @@
   width: 33.3%;
 }
 
+.col-md-6 .cke_widget_wrapper,
+.col-md-3 .cke_widget_wrapper,
+.col-md-9 .cke_widget_wrapper,
+.col-md-4 .cke_widget_wrapper {
+  max-width: 100%;
+}
+
+
 /* Custom styles */
 .col-md-6 img,
 .col-md-3 img,
