some base theme updates

--- a/profiles/helm/themes/custom/helm_base/sass/components/_media.scss
+++ b/profiles/helm/themes/custom/helm_base/sass/components/_media.scss
@@ -8,3 +8,11 @@ img {
   height: auto;
   display: inline-block;
 }
+
+
+// Generic media
+// ---------------------------
+
+.field-name-field-media {
+  margin-bottom: 20px;
+}
