--- a/profiles/helm/themes/custom/helm_base/sass/layout/_main.scss
+++ b/profiles/helm/themes/custom/helm_base/sass/layout/_main.scss
@@ -1,1 +1,9 @@
 // Non-modular or client styles for the .l-content region.
+
+
+// Tabs
+// ------------------------------
+
+.tabs, .nav-tabs {
+  margin-bottom: 20px;
+}
