--- a/profiles/helm/themes/custom/helm_base/sass/layout/_header.scss
+++ b/profiles/helm/themes/custom/helm_base/sass/layout/_header.scss
@@ -1,9 +1,19 @@
 // Non-modular or client styles for .l-header region.
 
+
+// Branding
+// ------------------------------
+
+.l-brand {
+  margin-bottom: 20px;
+}
+
 .l-logo {
   padding-bottom: rem-calc(10);
   padding-top: rem-calc(10);
 }
+
+
 
 
 // *
@@ -11,12 +21,14 @@
 // *
 // ******************************************************
 
-
-
 // Mobile only
 // --------------------------------------------------
 
 @media screen and (max-width: $screen-xs-max) {
+  
+  // Branding
+  // ------------------------------
+
   .l-logo {
     text-align: center;
   }
