--- a/profiles/helm/themes/contrib/minimalist_admin/sass/theme/_node.scss
+++ b/profiles/helm/themes/contrib/minimalist_admin/sass/theme/_node.scss
@@ -36,7 +36,7 @@
 }
 
 
-@media screen and (min-width: $screen-sm-min) {
+@media screen and (min-width: $screen-md-min) {
   .node-form {
 
     & > div {
