--- a/profiles/helm/themes/custom/helm_civic/sass/custom.scss
+++ b/profiles/helm/themes/custom/helm_civic/sass/custom.scss
@@ -22,6 +22,7 @@
 @import "components/grid";
 @import "components/media";
 @import "components/type";
+@import "components/forms";
 
 // Drupal, bootstrap
 @import "components/modals";
