--- a/profiles/helm/themes/custom/helm_civic/css/custom.css
+++ b/profiles/helm/themes/custom/helm_civic/css/custom.css
@@ -5181,7 +5181,7 @@ img.logo {
   .footer .block {
     margin-bottom: 35px; }
 
-[class^="fa-"] {
+[class^="fa-"], .draggable a.tabledrag-handle:before {
   display: inline-block;
   font-family: FontAwesome;
   font-style: normal;
@@ -5189,6 +5189,20 @@ img.logo {
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
+
+.draggable a.tabledrag-handle {
+  overflow: hidden;
+  padding-left: 0;
+  padding-right: 0;
+  position: relative;
+  display: inline-block; }
+
+.draggable a.tabledrag-handle:before {
+  position: absolute;
+  left: 0;
+  text-align: center;
+  top: 0;
+  text-indent: 0; }
 
 @font-face {
   font-family: "FontAwesome";
@@ -6719,6 +6733,78 @@ h6, .h6 {
 
 .page-header {
   margin-top: 0.9em; }
+
+.no-labels label, .no-label label {
+  display: none; }
+
+.tabledrag-toggle-weight-wrapper {
+  display: none; }
+
+.draggable a.tabledrag-handle {
+  padding: 0;
+  margin-left: 0;
+  margin-right: rem-calc(10);
+  margin-top: rem-calc(4);
+  height: 15px;
+  width: 15px;
+  text-indent: -150px; }
+  .draggable a.tabledrag-handle:before {
+    content: "\f047";
+    font-size: rem-calc(14);
+    line-height: 15px;
+    width: 15px; }
+
+input.form-autocomplete {
+  background-image: none;
+  display: block;
+  width: 100%;
+  height: 35px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.5;
+  color: #555555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s; }
+  input.form-autocomplete:focus {
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6); }
+  input.form-autocomplete::-moz-placeholder {
+    color: #999;
+    opacity: 1; }
+  input.form-autocomplete:-ms-input-placeholder {
+    color: #999; }
+  input.form-autocomplete::-webkit-input-placeholder {
+    color: #999; }
+  input.form-autocomplete[disabled], input.form-autocomplete[readonly], fieldset[disabled] input.form-autocomplete {
+    background-color: #eeeeee;
+    opacity: 1; }
+  input.form-autocomplete[disabled], fieldset[disabled] input.form-autocomplete {
+    cursor: not-allowed; }
+  html.js input.form-autocomplete {
+    background-position-y: 10px !important; }
+
+#autocomplete {
+  border: 1px solid #ccc;
+  border-top: 0;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  margin-top: -2px; }
+
+.views-widget {
+  position: relative; }
+  .views-widget #autocomplete {
+    left: 0 !important;
+    right: 0 !important;
+    top: 35px !important; }
 
 .modal-header .close {
   position: relative;
