--- a/sites/all/modules/custom/angular_311/js/angular-311/app/scss/_helm-civic-import.scss
+++ b/sites/all/modules/custom/angular_311/js/angular-311/app/scss/_helm-civic-import.scss
@@ -1,3 +1,3 @@
 
-@import "../../../../../../../themes/custom/helm_civic/sass/local-variables";
-@import "../../../../../../../themes/custom/helm_civic/sass/base/media-queries";
+@import "../../../../../../../../../profiles/helm/themes/custom/helm_civic/sass/local-variables";
+@import "../../../../../../../../../profiles/helm/themes/custom/helm_civic/sass/base/media-queries";
