--- a/profiles/helm/themes/custom/helm_civic/css/custom.css
+++ b/profiles/helm/themes/custom/helm_civic/css/custom.css
@@ -6713,7 +6713,7 @@ h1 + h1, h1 + h2, h1 + h3, h1 + h4, h1 + h5, h1 + h6, h2 + h1, h2 + h2, h2 + h3,
 
 h1, .h1 {
   line-height: 1.1em;
-  opacity: 0.87;
+  color: rgba(0, 0, 0, 0.87);
   margin-top: 0; }
   h1, h1 small, .h1, .h1 small {
     font-weight: 500; }
@@ -6721,28 +6721,28 @@ h1, .h1 {
 h2, .h2 {
   font-weight: 300;
   line-height: 1.2em;
-  opacity: 0.54; }
+  color: rgba(0, 0, 0, 0.54); }
 
 h3, .h3 {
   font-weight: 500;
   line-height: 1.4em;
-  opacity: 0.87; }
+  color: rgba(0, 0, 0, 0.87); }
 
 h4, .h4 {
   font-weight: 400;
   line-height: 1.4em;
-  opacity: 0.87; }
+  color: rgba(0, 0, 0, 0.87); }
 
 h5, .h5 {
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 1px;
   line-height: 1.5em;
-  opacity: 0.54; }
+  color: rgba(0, 0, 0, 0.54); }
 
 h6, .h6 {
   font-weight: 400;
-  opacity: 0.54; }
+  color: rgba(0, 0, 0, 0.54); }
 
 .page-header {
   margin-top: 0.9em; }
