--- a/profiles/helm/themes/custom/helm_civic/sass/components/_type.scss
+++ b/profiles/helm/themes/custom/helm_civic/sass/components/_type.scss
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1, .h1 {
   line-height: 1.1em;
-  opacity: .87;
+  color: rgba($headings-color, .87);
   margin-top: 0;
 
   &, small {
@@ -48,7 +48,7 @@ h1, .h1 {
 %header-h2 {
   font-weight: $light-weight;
   line-height: 1.2em;
-  opacity: .54;
+  color: rgba($headings-color, .54);
 }
 
 h2, .h2 {
@@ -58,7 +58,7 @@ h2, .h2 {
 h3, .h3 {
   font-weight: $medium-weight;
   line-height: 1.4em;
-  opacity: .87;
+  color: rgba($headings-color, .87);
 
   // a {
   
@@ -74,7 +74,7 @@ h3, .h3 {
 h4, .h4 {
   font-weight: $regular-weight;
   line-height: 1.4em;
-  opacity: .87;
+  color: rgba($headings-color, .87);
 
   // a {
   //   &:hover {
@@ -89,12 +89,12 @@ h5, .h5 {
   text-transform: uppercase;
   letter-spacing: 1px;
   line-height: 1.5em;
-  opacity: .54;
+  color: rgba($headings-color, .54);
 }
 
 h6, .h6 {
   font-weight: $regular-weight;
-  opacity: .54;
+  color: rgba($headings-color, .54);
 }
 
 
