--- a/profiles/helm/themes/custom/helm_civic/sass/custom.scss
+++ b/profiles/helm/themes/custom/helm_civic/sass/custom.scss
@@ -39,6 +39,7 @@
 @import "modules/off-canvas";
 @import "modules/drupal-panels";
 @import "modules/webfonts";
+@import "modules/views";
 @import "modules/311-app";
 
 // Themes
