--- a/profiles/helm/themes/custom/helm_civic/sass/theme/_common-fields.scss
+++ b/profiles/helm/themes/custom/helm_civic/sass/theme/_common-fields.scss
@@ -18,6 +18,13 @@
   margin-top: 40px; 
 }
 
+.common-border-small + .common-border-small {
+  border-top: 1px solid $gray-lighter;
+  padding-top: 20px;
+  margin-top: 20px; 
+}
+
+
 // Content media
 // ----------------------------------------------------------------------------
 
