--- a/profiles/helm/themes/custom/helm_civic/sass/custom.scss
+++ b/profiles/helm/themes/custom/helm_civic/sass/custom.scss
@@ -40,6 +40,7 @@
 @import "modules/drupal-panels";
 @import "modules/webfonts";
 @import "modules/views";
+@import "modules/panels";
 @import "modules/311-app";
 
 // Themes
