--- a/profiles/helm/themes/custom/helm_civic/sass/modules/_panels.scss
+++ b/profiles/helm/themes/custom/helm_civic/sass/modules/_panels.scss
@@ -4,16 +4,23 @@
 // ---------------------------
 
 
+// Panel margins
+// ----------------------------
+
+$pane-margin-bottom-small: 15px;
+$pane-margin-bottom: 30px;
+$pane-margin-bottom-big: 50px;
+
 .pane-margin-bottom-small {
-  margin-bottom: 15px;
+  margin-bottom: $pane-margin-bottom-small;
 }
 
 .pane-margin-bottom {
-  margin-bottom: 30px;
+  margin-bottom: $pane-margin-bottom;
 }
 
 .pane-margin-bottom-big {
-  margin-bottom: 50px;
+  margin-bottom: $pane-margin-bottom-big;
 }
 
 .pane-margin-bottom-none {
@@ -32,16 +39,19 @@
 
 @include respond($xs-only) {
 
+  // Panel margins
+  // ----------------------------
+
   .pane-xs-margin-bottom-small {
-    margin-bottom: 15px;
+    margin-bottom: $pane-margin-bottom-small;
   }
 
   .pane-xs-margin-bottom {
-    margin-bottom: 30px;
+    margin-bottom: $pane-margin-bottom;
   }
 
   .pane-xs-margin-bottom-big {
-    margin-bottom: 50px;
+    margin-bottom: $pane-margin-bottom-big;
   }
 
   .pane-xs-margin-bottom-none {
@@ -54,16 +64,19 @@
 
 @include respond($sm-and-down) {
 
+  // Panel margins
+  // ----------------------------
+
   .pane-sm-down-margin-bottom-small {
-    margin-bottom: 15px;
+    margin-bottom: $pane-margin-bottom-small;
   }
 
   .pane-sm-down-margin-bottom {
-    margin-bottom: 30px;
+    margin-bottom: $pane-margin-bottom;
   }
 
   .pane-sm-down-margin-bottom-big {
-    margin-bottom: 50px;
+    margin-bottom: $pane-margin-bottom-big;
   }
 
   .pane-sm-down-margin-bottom-none {
@@ -75,16 +88,19 @@
 
 @include respond($sm-up) {
 
+  // Panel margins
+  // ----------------------------
+
   .pane-sm-margin-bottom-small {
-    margin-bottom: 15px;
+    margin-bottom: $pane-margin-bottom-small;
   }
 
   .pane-sm-margin-bottom {
-    margin-bottom: 30px;
+    margin-bottom: $pane-margin-bottom;
   }
 
   .pane-sm-margin-bottom-big {
-    margin-bottom: 50px;
+    margin-bottom: $pane-margin-bottom-big;
   }
 
   .pane-sm-margin-bottom-none {
@@ -96,16 +112,19 @@
 
 @include respond($md-up) {
 
+  // Panel margins
+  // ----------------------------
+
   .pane-md-margin-bottom-small {
-    margin-bottom: 15px;
+    margin-bottom: $pane-margin-bottom-small;
   }
 
   .pane-md-margin-bottom {
-    margin-bottom: 30px;
+    margin-bottom: $pane-margin-bottom;
   }
 
   .pane-md-margin-bottom-big {
-    margin-bottom: 50px;
+    margin-bottom: $pane-margin-bottom-big;
   }
 
   .pane-md-margin-bottom-none {
