--- a/profiles/helm/themes/custom/helm_civic/sass/base/_media-queries.scss
+++ b/profiles/helm/themes/custom/helm_civic/sass/base/_media-queries.scss
@@ -17,7 +17,7 @@ $sm-up: "screen and (min-width: #{$screen-sm-min})";
 // Laptop + tablet + mobile
 $md-and-down: "screen and (max-width: #{$screen-md-max})";
 // Laptop only
-$md-only: "screen and (min-width: #{$screen-sm-min}) and (max-width: #{$screen-xs-max})";
+$md-only: "screen and (min-width: #{$screen-md-min}) and (max-width: #{$screen-md-max})";
 // Laptop up
 $md-up: "screen and (min-width: #{$screen-md-min})";
 // Large screen
