--- a/profiles/helm/themes/custom/helm_civic/sass/custom.scss
+++ b/profiles/helm/themes/custom/helm_civic/sass/custom.scss
@@ -42,6 +42,7 @@
 @import "modules/views";
 @import "modules/panels";
 @import "modules/311-app";
+@import "modules/social-wall";
 
 // Themes
 // -----------------------------------------
