--- a/profiles/helm/themes/custom/helm_civic/sass/components/_grid.scss
+++ b/profiles/helm/themes/custom/helm_civic/sass/components/_grid.scss
@@ -1,4 +1,11 @@
 
+@mixin grid-column-style($gutter: $grid-gutter-width) {
+  position: relative;
+  min-height: 1px;
+  padding-left:  ($gutter / 2);
+  padding-right: ($gutter / 2);
+}
+
 
 .false-container {
   margin: 0 auto;
